--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "fmt": "prettier --write ."
   },
   "dependencies": {
+    "@fontsource-variable/noto-sans-kr": "^5.0.4",
+    "@fontsource-variable/orbitron": "^5.0.18",
+    "@fontsource/noto-sans": "^5.0.18",
     "astro": "^4.0.6"
+  },
+  "devDependencies": {
+    "prettier": "^3.1.1",
+    "prettier-plugin-astro": "^0.12.2",
+    "sass": "^1.69.5"
   }
 }
